--- a/index.html
+++ b/index.html
@@ -3,78 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iris 💖 Vinicius</title>
+  <title>Iris ❤️ Vinicius</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to right, #ffc0cb, #ff69b4);
+      background: linear-gradient(to right, #8B0000, #B22222);
       font-family: 'Arial', sans-serif;
       text-align: center;
       color: #fff;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
       padding: 30px 20px;
+      position: relative;
+      z-index: 1;
     }
 
     h1 {
       font-size: 10vw;
-      margin-top: 40px;
-      margin-bottom: 20px;
+      margin: 20px 0;
     }
 
     p {
       font-size: 6vw;
       margin: 20px 0;
+      line-height: 1.5;
     }
 
     button {
       padding: 4vw 8vw;
       font-size: 5vw;
-      background-color: #ff1493;
+      background-color: #FF6347;
       border: none;
       border-radius: 20px;
       color: white;
       cursor: pointer;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       margin-top: 30px;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background-color: #ff69b4;
-    }
-
-    .hearts {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 0;
+      background-color: #FF4500;
     }
 
     .heart {
-      position: absolute;
-      width: 30px;
-      height: 30px;
-      background: url('https://i.imgur.com/5XfsD4R.png') no-repeat center;
-      background-size: contain;
+      position: fixed;
+      top: -50px;
+      color: #fff;
+      font-size: 30px;
       animation: float 6s infinite ease-in;
+      opacity: 0.7;
+      pointer-events: none;
     }
 
     @keyframes float {
       0% {
-        transform: translateY(100vh) scale(0.5);
-        opacity: 1;
+        transform: translateY(0) scale(1);
+        opacity: 0.7;
       }
       100% {
-        transform: translateY(-10vh) scale(1.2);
+        transform: translateY(110vh) scale(1.5);
         opacity: 0;
       }
     }
@@ -85,37 +78,22 @@
       }
 
       p {
-        font-size: 36px;
+        font-size: 30px;
       }
 
       button {
-        font-size: 28px;
+        font-size: 26px;
         padding: 15px 30px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="hearts"></div>
 
   <div class="container">
-    <h1>Iris 💖 Vinicius</h1>
+    <h1>Iris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
-    <p>Te amo infinitamente ❤️</p>
-    <button onclick="alert('Você é o amor da minha vida, eu te amo muito! 😍')">Clica aqui, amor!</button>
-  </div>
+    <p>Você é o melhor presente que a vida me deu. Te amo infinito ❤️</p>
+    <button onclick="alert('
 
 
-  <script>
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
-      document.querySelector(".hearts").appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
-    }
-    setInterval(createHeart, 500);
-  </script>
-</body>
-</html>
