--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iris ❤️ Vinicius</title>
   <style>
-    body {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       background: linear-gradient(to right, #8B0000, #B22222);
-      font-family: 'Arial', sans-serif;
-      text-align: center;
+      font-family: 'Segoe UI', sans-serif;
       color: #fff;
+      text-align: center;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 20px;
     }
 
     .container {
       max-width: 800px;
       margin: 0 auto;
-      padding: 30px 20px;
-      position: relative;
       z-index: 1;
     }
 
     h1 {
-      font-size: 10vw;
-      margin: 20px 0;
+      font-size: 12vw;
+      margin-bottom: 20px;
+      animation: fadeIn 2s ease forwards;
     }
 
     p {
       font-size: 6vw;
       margin: 20px 0;
       line-height: 1.5;
+      animation: fadeIn 3s ease forwards;
     }
 
     button {
@@ -39,16 +48,18 @@
       font-size: 5vw;
       background-color: #FF6347;
       border: none;
-      border-radius: 20px;
+      border-radius: 50px;
       color: white;
       cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
       margin-top: 30px;
-      transition: background-color 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+      animation: fadeIn 4s ease forwards;
     }
 
     button:hover {
       background-color: #FF4500;
+      transform: scale(1.05);
     }
 
     .heart {
@@ -56,7 +67,7 @@
       top: -50px;
       color: #fff;
       font-size: 30px;
-      animation: float 6s infinite ease-in;
+      animation: float 8s infinite ease-in;
       opacity: 0.7;
       pointer-events: none;
     }
@@ -69,6 +80,17 @@
       100% {
         transform: translateY(110vh) scale(1.5);
         opacity: 0;
+      }
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
       }
     }
 
@@ -94,6 +116,28 @@
     <h1>Iris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
     <p>Você é o melhor presente que a vida me deu. Te amo infinito ❤️</p>
-    <button onclick="alert('
+    <button onclick="alert('Te amo pra sempre, Vinicius! ❤️')">Clica aqui, amor!</button>
+  </div>
+
+  <script>
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.classList.add("heart");
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.fontSize = (Math.random() * 20 + 20) + "px";
+      heart.innerHTML = "❤️";
+      document.body.appendChild(heart);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 8000);
+    }
+
+    setInterval(createHeart, 500);
+  </script>
+
+</body>
+</html>
+
 
 
