--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: linear-gradient(to right, #8B0000, #B22222);
+      background: linear-gradient(to right, #ff7eb9, #ff65a3);
       font-family: 'Segoe UI', sans-serif;
       color: #fff;
       text-align: center;
@@ -45,7 +45,7 @@
     button {
       padding: 4vw 8vw;
       font-size: 5vw;
-      background-color: #FF6347;
+      background-color: #ff3c82;
       border: none;
       border-radius: 50px;
       color: white;
@@ -57,14 +57,14 @@
     }
 
     button:hover {
-      background-color: #FF4500;
+      background-color: #e63670;
       transform: scale(1.05);
     }
 
     .heart {
       position: fixed;
       top: 100%;
-      color: #ffcad4;
+      color: #fff0f5;
       font-size: 30px;
       animation: floatUp 6s linear infinite;
       opacity: 0.8;
@@ -115,7 +115,7 @@
   <div class="container">
     <h1>Iris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
-    <p>Você é o melhor presente que a vida me deu. Te amo infinito ❤️</p>
+    <p>Você é a melhor parte da minha vida. Te amo infinito ❤️</p>
     <button onclick="alert('Te amo pra sempre, Vinicius! ❤️')">Clica aqui, amor!</button>
   </div>
 
@@ -138,5 +138,6 @@
 
 </body>
 </html>
+
 
 
