--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
   <div class="container">
     <h1>Iris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
-    <p>Você é a melhor parte da minha vida. Te amo infinito ❤️</p>
-    <button onclick="alert('Te amo pra sempre, Vinicius! ❤️')">Clica aqui, amor!</button>
+    <p>Você é a melhor parte da minha vida. Eu te amo infinito ❤️</p>
+    <button onclick="alert('Eu te amo pra sempre, Vinicius! ❤️')">Clica aqui, amor!</button>
   </div>
 
   <script>
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
