--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 <body>
 
   <div class="container">
-    <h1>Iris ❤️ Vinicius</h1>
+    <h1>Íris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
-    <p>Você é a melhor parte da minha vida. Eu te amo infinito ❤️</p>
-    <button onclick="alert('Eu te amo pra sempre, Vinicius! ❤️')">Clica aqui, amor!</button>
+    <p>Você é incrível. Eu te amo infinito ❤️</p>
+    <button onclick="alert('Eu te amo muito, Vinicius! ❤️')">Clica aqui, amor!</button>
   </div>
 
   <script>
