--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="container">
     <h1>Íris ❤️ Vinicius</h1>
     <p>Feliz Dia dos Namorados, amor!</p>
-    <p>Você é incrível. Eu te amo infinito ❤️</p>
+    <p>Você é incrível. Eu te amo muito ❤️</p>
     <button onclick="alert('Eu te amo muito, Vinicius! ❤️')">Clica aqui, amor!</button>
   </div>
 
